# MovieRatingSystem

./: .gitignore  README.md  main.py  pyproject.toml  seed_data.py
app/controller/: movie_controller.py
app/core/: logging_config.py
app/models/: models.py
app/repositories/: movie_repository.py
app/schemas/: schemas.py
app/services/: movie_service.py
